--- a/src/main/resources/src/components/MainPage/Select/Select.scss
+++ b/src/main/resources/src/components/MainPage/Select/Select.scss
@@ -367,8 +367,8 @@
 
     .select__selected_item {
       width: calc(100%);
-      max-width: calc(70%);
       font-size: 0.8rem;
+      max-width: calc(60%);
 
       .select-product__color_name {
         padding: 5px 5px;
